# fastzero

./: .coverage  .gitignore  README.md  database.db  pyproject.toml
fastzero/: clientes_crm.py  main.py  models.py  settings.py  testes_nocrm.py
migrations/: env.py
migrations/versions/: 3ee71e0fb5c8_primeira_migração_para_o_banco_de_dados.py  ca0572d6fd0a_create_user_table.py  e69c6eebcbd5_create_user_table.py
tests/: .coverage  conftest.py  test_app.py  test_db.py
