[project]
name = "fastzero"
version = "0.1.0"
description = ""
authors = [
    {name = "Yago Freire",email = "freireyago51@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.120.3,<0.121.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "gitignore-maker (>=0.1.3,<0.2.0)",
    "ignr (>=2.2,<3.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fastzero/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastzero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pytest = "^9.0.1"
taskipy = "^1.14.1"
alembic = "^1.17.2"

